2005-09-30  Moritz Schulte  <moritz@g10code.com>

	* poldi-ctrl.c (struct poldi_ctrl_opt): Remove unnecessary, rather
	annoying const attributes.
	(cmd_add_user): Likewise.

2005-09-27  Moritz Schulte  <moritz@g10code.com>

	* poldi-ctrl.c: Adjust to new card_init API; pass zero timeout.

2005-07-26  Moritz Schulte  <moritz@g10code.com>

	* poldi-ctrl.c (cmd_test): Remove unnecessary const attributes and
	cast.
	(cmd_dump): Likewise.
	(cmd_remove_user): Likewise.
	(cmd_set_key): Likewise.
	Updated to use new support.h API.
	(cmd_add_user): Fail, if specified serial number does already
	exist in database.
	(cmd_add_user): Fail, if specified user does not exist on system.
	(poldi_ctrl_options_cb): Better interaction with jnlib in respect
	to error propagation.
	(key_file_remove): Do not return error in case of ENOENT.

2005-07-13  Moritz Schulte  <moritz@g10code.com>

	* poldi-ctrl.c: Adjust to new card_info() API, use version
	information in order to figure out if CHV3 is necessary for public
	key retrival.

2005-07-12  Moritz Schulte  <moritz@g10code.com>

	* poldi-ctrl.c (cmd_show_key): Only print KEY_STRING, if non-NULL.

2005-01-30  Moritz Schulte  <moritz@g10code.com>

	* poldi-ctrl.c (sexp_to_string): New function.

2004-11-29  Moritz Schulte  <moritz@g10code.com>

	* poldi-ctrl.c: Fix contact address.

2004-11-27  Moritz Schulte  <moritz@g10code.com>

	* poldi-ctrl.c (cmd_test): Adjust card_init caller.
	(cmd_dump): Likewise.
	(cmd_set_key): Likewise.
	Implement require-card-switch option.
	(cmd_test): Do not require that the uid of the current process is
	equal to the one of the user to test authentication for.